--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/12/18/n2367165.md#1" target="_blank">组图：法轮功在海峡两岸的强烈对比</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10018540.md#1" target="_blank">戏剧家英若诚的线人生涯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
