--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/22/n10801600.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
